v3.4.0 se crea SuperSimpleList y se modifica JSON con SimpleList